maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: ')' expected but 'while' found.
  while(!estSurBiscuit()){
  ^